--- a/css/style_main.css
+++ b/css/style_main.css
@@ -2,7 +2,9 @@
 
 html{
     font-family: 'Fruktur', cursive;
-    
+    color: whitesmoke;
+    text-align: center;
+    font-size: 20px;
 }
 
 body{
@@ -14,19 +16,6 @@ body{
 
 
     overflow: hidden; /* Hide scroll bars*/
-
-    transition: opacity 0.2s ease-out;
-    transition: margin-top 5s ease ease-out;
-}
-
-body.unload {
-    
-    opacity: 0%;
-    margin-top: 5vh;
-}
-
-body.load{
-    opacity: 100%;
 }
 
 
@@ -39,40 +28,23 @@ span{
    
 }
 
-p{
-    color: whitesmoke;
-    text-align: center;
-    font-size: 25px;
-    margin-left: 100px;
-    margin-right: 100px;
+#button{
+ 
+    font-size: 30px;
 }
-
-.button{
-    padding: 10px;
-    margin: 20px;
-
-    background-image: linear-gradient(15deg, #fcae48 0%, #ffd95b 100%);
-
-    border-color: transparent;
-    border-radius: 8px;
-    box-shadow: 0px 0px 2px 3px rgb(60, 59, 59);
-
-    transition: box-shadow 0.15s ease-in;
-    
-}
-
-.button p {
-    color: rgb(0, 0, 0);
-    font-style: oblique;
-    font-size: 1.8em;
-    padding: 10px;
-}
-
 .btn{
     text-align: center;
-    padding-top: 500px;
+    padding-top: 400px;
 }
-
-.button:hover{
-    box-shadow: 0 3px 20px 0px rgba(179, 89, 62, 0.679), 0 17px 50px 5px rgba(209, 154, 82, 0.7);
+.exit{
+    
+    position: fixed;
+    bottom: 0;
+    right: 0;
+}
+.ty{
+    font-style: Brush Script MT;
+}
+#button:hover{
+    box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(255, 255, 255, 0.19);
 }
