--- a/css/style_main.css
+++ b/css/style_main.css
@@ -35,6 +35,7 @@ span{
 .btn{
     text-align: center;
     padding-top: 400px;
+    cursor: pointer;
 }
 .exit{
     
@@ -42,9 +43,31 @@ span{
     bottom: 0;
     right: 0;
 }
+.exit:hover{
+    cursor: pointer;
+}
 .ty{
     font-style: Brush Script MT;
 }
 #button:hover{
     box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(255, 255, 255, 0.19);
+    
+}
+.results{
+    
+    display: grid;
+    float: top;
+    float: left;
+    grid-template-columns: repeat(2,1fr);
+    padding-top: 1rem;
+    font-size: 14px;
+}
+.player{
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+.computer{
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-right: 0%;
 }
